--- a/public/nexus_not_available.html
+++ b/public/nexus_not_available.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Authorization Error</title>
+  <title>Nexus Artifactory Server is unavailable</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <LINK href="error_dialog.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-  <!-- This file lives in public/422.html -->
   <div class="dialog">
     <div>
-      <h1>You are not authorized to view this page!</h1>
+      <h1>Nexus Artifactory Server is unavailable</h1>
       <p>I hope you die you evil hacker.</p>
     </div>
     <p>If you are the application owner, you have been fired.</p>
