added tomcat concern to pull a listing of the current deployments on a configured server via the Service API and added a landing page when Nexus is unavailable

--- a/public/nexus_not_available.html
+++ b/public/nexus_not_available.html
@@ -10,9 +10,8 @@
   <div class="dialog">
     <div>
       <h1>Nexus Artifactory Server is unavailable</h1>
-      <p>I hope you die you evil hacker.</p>
+      <p>Please have an administrator configure the Nexus server</p>
     </div>
-    <p>If you are the application owner, you have been fired.</p>
   </div>
 </body>
 </html>
