Making an error page show up if Git is un-reachable. Ensuring the error is logged to our logs.

--- a/public/git_not_available.html
+++ b/public/git_not_available.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Nexus Artifactory Server is unavailable</title>
+  <title>Git Server is unavailable</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <LINK href="error_dialog.css" rel="stylesheet" type="text/css">
   <LINK href="../error_dialog.css" rel="stylesheet" type="text/css">
-
 </head>
 
 <body>
   <div class="dialog">
     <div>
-      <h1>Nexus Artifactory Server is unavailable</h1>
-      <p>Please have an administrator configure the Nexus server</p>
+      <h1>Git Server is unavailable</h1>
+      <p>Please have an administrator check the logs.</p>
     </div>
   </div>
 </body>
