--- a/public/not_authorized.html
+++ b/public/not_authorized.html
@@ -4,6 +4,7 @@
   <title>Authorization Error</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <LINK href="error_dialog.css" rel="stylesheet" type="text/css">
+  <LINK href="../error_dialog.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
