added check that all services are provisioned - added GIT

--- a/public/not_configured.html
+++ b/public/not_configured.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-<!-- This file lives in public/422.html -->
 <div class="dialog">
     <div>
         <h1>Prisme must be configured!</h1>
         <p>A Prisme administrator must configure:</p>
         <p>The Nexus artifactory</p>
         <p>The Jenkins build server</p>
+        <p>The GIT server</p>
         <p>At least one Tomcat instance</p>
     </div>
 </div>
