not authorized changed.

--- a/public/not_authorized.html
+++ b/public/not_authorized.html
@@ -12,9 +12,8 @@
   <div class="dialog">
     <div>
       <h1>You are not authorized to view this page!</h1>
-      <p>I hope you die you evil hacker.</p>
+      <p>Only authorized users are allowed access to this page.</p>
     </div>
-    <p>If you are the application owner, you have been fired.</p>
   </div>
 </body>
 </html>
