centering of flash on public pages

--- a/public/not_configured.html
+++ b/public/not_configured.html
@@ -1,18 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Configuration Error</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <LINK href="error_dialog.css" rel="stylesheet" type="text/css">
-    <LINK href="../error_dialog.css" rel="stylesheet" type="text/css">
-    <style>
-        ol.configure li {
-            text-align: left;
-        }
-    </style>
-</head>
-
-<body>
+<link rel="stylesheet" media="all" href="error_dialog.css"/>
+<style>
+    ol.configure li {
+        text-align: left;
+    }
+</style>
 <div class="dialog">
     <div>
         <h1>PRISME must be configured!</h1>
@@ -25,5 +16,3 @@
         </ol>
     </div>
 </div>
-</body>
-</html>
