--- a/public/git_not_available.html
+++ b/public/git_not_available.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Git Server is unavailable</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <LINK href="error_dialog.css" rel="stylesheet" type="text/css">
-  <LINK href="../error_dialog.css" rel="stylesheet" type="text/css">
-</head>
-
-<body>
-  <div class="dialog">
+<link rel="stylesheet" media="all" href="error_dialog.css"/>
+<div class="dialog">
     <div>
-      <h1>Git Server is unavailable</h1>
-      <p>Please have an administrator check the logs.</p>
+        <h1>Git Server is Unavailable</h1>
+        <p>Please have an administrator check the logs.</p>
     </div>
-  </div>
-</body>
-</html>
+</div>
