--- a/public/not_authorized.html
+++ b/public/not_authorized.html
@@ -1,19 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Authorization Error</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <LINK href="error_dialog.css" rel="stylesheet" type="text/css">
-  <LINK href="../error_dialog.css" rel="stylesheet" type="text/css">
-</head>
-
-<body>
-  <!-- This file lives in public/422.html -->
-  <div class="dialog">
+<link rel="stylesheet" media="all" href="error_dialog.css" />
+<div class="dialog">
     <div>
-      <h1>You are not authorized to view this page!</h1>
-      <p>Only authorized users are allowed access to this page.</p>
+        <h1>You are not authorized to view this page!</h1>
+        <p>Only authorized users are allowed access to this page.</p>
     </div>
-  </div>
-</body>
-</html>
+</div>
